--- a/META.yml
+++ b/META.yml
@@ -3,19 +3,15 @@ abstract: 'Restrict attributes based on values of other attributes'
 author:
   - 'Moritz Onken'
 build_requires:
-  Carp: 0
-  English: 0
   File::Find: 0
   File::Temp: 0
   Module::Build: 0.3601
-  Scalar::Util: 0
-  Test::More: 0.94
+  Test::More: 0.88
   Test::Most: 0.23
-  perl: 5.004
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200000, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110550'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,22 +20,25 @@ name: MooseX-Attribute-Dependent
 provides:
   MooseX::Attribute::Dependencies:
     file: lib/MooseX/Attribute/Dependency.pm
-    version: v1.0.0
+    version: v1.0.1
   MooseX::Attribute::Dependency:
     file: lib/MooseX/Attribute/Dependency.pm
-    version: v1.0.0
+    version: v1.0.1
   MooseX::Attribute::Dependent:
     file: lib/MooseX/Attribute/Dependent.pm
-    version: v1.0.0
+    version: v1.0.1
   MooseX::Attribute::Dependent::Meta::Role::Attribute:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Attribute.pm
-    version: v1.0.0
+    version: v1.0.1
+  MooseX::Attribute::Dependent::Meta::Role::Class:
+    file: lib/MooseX/Attribute/Dependent/Meta/Role/Class.pm
+    version: v1.0.1
   MooseX::Attribute::Dependent::Meta::Role::Method::Accessor:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Method/Accessor.pm
-    version: v1.0.0
+    version: v1.0.1
   MooseX::Attribute::Dependent::Meta::Role::Method::Constructor:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Method/Constructor.pm
-    version: v1.0.0
+    version: v1.0.1
 requires:
   Moose: 0
   Moose::Exporter: 0
@@ -50,21 +49,17 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Attribute-Dependent
   homepage: http://search.cpan.org/dist/MooseX-Attribute-Dependent/
   repository: git://github.com/monken/p5-moosex-attribute-dependent.git
-version: 1.0.0
+version: 1.0.1
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@Filter/CompileTests'
       version: 1.103030
-    -
-      class: Dist::Zilla::Plugin::CriticTests
-      name: '@Filter/CriticTests'
-      version: 1.102280
     -
       class: Dist::Zilla::Plugin::HasVersionTests
       name: '@Filter/HasVersionTests'
@@ -74,57 +69,53 @@ x_Dist_Zilla:
       name: '@Filter/KwaliteeTests'
       version: 1.101420
     -
-      class: Dist::Zilla::Plugin::MetaTests
-      name: '@Filter/MetaTests'
-      version: 4.200000
-    -
       class: Dist::Zilla::Plugin::MinimumVersionTests
       name: '@Filter/MinimumVersionTests'
       version: 1.101421
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Filter/PodCoverageTests'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::PortabilityTests
       name: '@Filter/PortabilityTests'
       version: 1.101420
     -
-      class: Dist::Zilla::Plugin::ReportVersions
-      name: '@Filter/ReportVersions'
-      version: 1.102460
-    -
-      class: Dist::Zilla::Plugin::UnusedVarsTests
-      name: '@Filter/UnusedVarsTests'
-      version: 1.100860
+      class: Dist::Zilla::Plugin::ReportVersions::Tiny
+      name: '@Filter/ReportVersions::Tiny'
+      version: 1.03
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.200000
+      version: 4.200004
+    -
+      class: Dist::Zilla::Plugin::PruneFiles
+      name: '@Filter/PruneFiles'
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.200000
+      version: 4.200004
     -
-      class: Dist::Zilla::Plugin::AutoPrereq
-      name: '@Filter/AutoPrereq'
-      version: 4.200000
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@Filter/AutoPrereqs'
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Filter/NextRelease'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Filter/PodWeaver'
@@ -136,11 +127,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::Bugtracker
       name: '@Filter/Bugtracker'
@@ -152,7 +143,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Repository
       name: '@Filter/Repository'
-      version: 0.16
+      version: 0.17
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Filter/MetaProvides::Package'
@@ -160,31 +151,31 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Filter/ModuleBuild'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: '@Filter/CheckChangeLog'
@@ -192,41 +183,41 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/Git/Check'
-      version: 1.103520
+      version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/Git/Commit'
-      version: 1.103520
+      version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Filter/Git/Tag'
-      version: 1.103520
+      version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Filter/Git/Push'
-      version: 1.103520
+      version: 1.110500
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200000
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200000
+      version: 4.200004
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.200000
+    version: 4.200004
