Import of PERLER/MooseX-Attribute-Dependent-1.1.0 from CPAN.
gitpan-cpan-distribution: MooseX-Attribute-Dependent
gitpan-cpan-version:      1.1.0
gitpan-cpan-path:         PERLER/MooseX-Attribute-Dependent-1.1.0.tar.gz
gitpan-cpan-author:       PERLER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,12 +6,14 @@ build_requires:
   File::Find: 0
   File::Temp: 0
   Module::Build: 0.3601
+  MyInterRole: 0
+  MyRole: 0
   Test::More: 0.88
   Test::Most: 0.23
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110550'
+generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110580'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,25 +22,31 @@ name: MooseX-Attribute-Dependent
 provides:
   MooseX::Attribute::Dependencies:
     file: lib/MooseX/Attribute/Dependency.pm
-    version: v1.0.1
+    version: v1.1.0
   MooseX::Attribute::Dependency:
     file: lib/MooseX/Attribute/Dependency.pm
-    version: v1.0.1
+    version: v1.1.0
   MooseX::Attribute::Dependent:
     file: lib/MooseX/Attribute/Dependent.pm
-    version: v1.0.1
+    version: v1.1.0
+  MooseX::Attribute::Dependent::Meta::Role::ApplicationToClass:
+    file: lib/MooseX/Attribute/Dependent/Meta/Role/ApplicationToClass.pm
+    version: v1.1.0
+  MooseX::Attribute::Dependent::Meta::Role::ApplicationToRole:
+    file: lib/MooseX/Attribute/Dependent/Meta/Role/ApplicationToRole.pm
+    version: v1.1.0
   MooseX::Attribute::Dependent::Meta::Role::Attribute:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Attribute.pm
-    version: v1.0.1
+    version: v1.1.0
   MooseX::Attribute::Dependent::Meta::Role::Class:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Class.pm
-    version: v1.0.1
+    version: v1.1.0
   MooseX::Attribute::Dependent::Meta::Role::Method::Accessor:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Method/Accessor.pm
-    version: v1.0.1
+    version: v1.1.0
   MooseX::Attribute::Dependent::Meta::Role::Method::Constructor:
     file: lib/MooseX/Attribute/Dependent/Meta/Role/Method/Constructor.pm
-    version: v1.0.1
+    version: v1.1.0
 requires:
   Moose: 0
   Moose::Exporter: 0
@@ -49,7 +57,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Attribute-Dependent
   homepage: http://search.cpan.org/dist/MooseX-Attribute-Dependent/
   repository: git://github.com/monken/p5-moosex-attribute-dependent.git
-version: 1.0.1
+version: 1.1.0
 x_Dist_Zilla:
   plugins:
     -
@@ -80,10 +88,6 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
       version: 4.200004
-    -
-      class: Dist::Zilla::Plugin::PortabilityTests
-      name: '@Filter/PortabilityTests'
-      version: 1.101420
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
@@ -181,25 +185,33 @@ x_Dist_Zilla:
       name: '@Filter/CheckChangeLog'
       version: 0.01
     -
-      class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Filter/UploadToCPAN'
-      version: 4.200004
-    -
       class: Dist::Zilla::Plugin::Git::Check
-      name: '@Filter/Git/Check'
+      name: '@Filter/Git::Check'
       version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Commit
-      name: '@Filter/Git/Commit'
+      name: '@Filter/Git::Commit'
+      version: 1.110500
+    -
+      class: Dist::Zilla::Plugin::Git::CommitBuild
+      name: '@Filter/Git::CommitBuild'
       version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Tag
-      name: '@Filter/Git/Tag'
+      name: '@Filter/TagMaster'
+      version: 1.110500
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: '@Filter/TagRelease'
       version: 1.110500
     -
       class: Dist::Zilla::Plugin::Git::Push
-      name: '@Filter/Git/Push'
+      name: '@Filter/Git::Push'
       version: 1.110500
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@Filter/UploadToCPAN'
+      version: 4.200004
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
