--- a/dist.ini
+++ b/dist.ini
@@ -3,9 +3,21 @@ author  = Moritz Onken
 license = BSD
 copyright_holder = Moritz Onken
 
-version = 1.1.0
+version = 1.1.1
 
 [@Filter]
 -bundle = @JQUELIN
 -remove = AutoVersion
+-remove = AutoPrereqs
 
+[Prereqs]
+Moose = 0
+Moose::Exporter = 0
+Moose::Role = 0
+Moose::Util::MetaRole = 0
+overload = 0
+File::Find = 0
+File::Temp = 0
+Module::Build = 0.3601
+Test::More = 0.88
+Test::Most = 0.23
